@@ -15,6 +15,7 @@
 			<li><a href="/">Home</a></li>
                         <li><a href="/portfolio">Portfolio</a></li>
                         <li><a href="/assembly">Assembly</a></li>
+                        <li><a href="/login">Login</a></li>
                     </ul>
                 </span>
             </div>
